# thesis_sketch

./: Makefile  README.md  exclude_me.txt  pyproject.toml  requirements.txt
data/raw/COLLIE/task3/: data_look.py
data/raw/VietnamQA/: data_look.py
data/scrapers/: parse_codolc.py  parse_mirals.py  parse_yapravo.py
docs/: datasets.md  setup_environment.md
docs/models/: experiments.md  model_papers.md
notebooks/: 01-collie-look.ipynb  01-vietnam-look.ipynb
scripts/: run.py
src/: data_reader.py  metrics.py  utils.py
src/data_preparation/collie/: 01_data_preprocessing.py  02_data_cleaning.py
src/data_preparation/vietnam/: 01_data_preparation.py  02_data_cleaning.py  translate_vietnam_to_english.py  vietnam_to_english.py
src/evaluate/: base_evaluator.py  f_score.py  ndcg.py  recall.py
src/models/: base_model.py  bm_25.py
src/pipelines/bert/: model.py  train.py
src/pipelines/bert/config/: finetune_bert.yaml  test_config.yaml
src/pipelines/bert/data/: datamodule.py  dataset.py
src/pipelines/bm25/: model.py  train_bm25.py
src/train/: train_bm25.py
src/train_bm25/: bm25.py  train_collie.py
